gitops/manifests/workloads/anythingllm/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anythingllm
  labels:
    openshift.io/cluster-monitoring: "true"
