gitops/manifests/workloads/anythingllm/base/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: anythingllm
  namespace: anythingllm
  labels:
    app: anythingllm
spec:
  replicas: 1
  selector:
    matchLabels:
      statefulset: anythingllm
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: anythingllm
        statefulset: anythingllm
    spec:
      restartPolicy: Always
      serviceAccountName: anythingllm-sa
      securityContext:
        runAsUser: 0
        fsGroup: 0      
      containers:
        - resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '2'
              memory: 4Gi
          name: anythingllm
          ports:
            - name: notebook-port
              containerPort: 3001
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: anythingllm-pvc
              mountPath: /app/server/storage
            - name: shm
              mountPath: /dev/shm
          terminationMessagePolicy: File
          image: 'mintplexlabs/anythingllm:latest'
      serviceAccount: default
      volumes:
        - name: shm
          emptyDir:
            medium: Memory
        - name: anythingllm-pvc
          persistentVolumeClaim:
            claimName: anythingllm-pvc
      dnsPolicy: ClusterFirst
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
